# ninth-virtue

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: dosbox-internals.md  memory-map.md  redraw-mechanism.md  reverse-engineering.md  visibility-re.md
scripts/: check-no-build-warnings.ps1  disasm_exe.py  disasm_ovl.py  freeze-visibility-artifacts.ps1  scan_visibility_refs.py
src/: app.rs  audio.rs  controller.rs  icon.rs  lib.rs  main.rs  preferences.rs  test_support.rs  window_focus.rs
src/dosbox/: config.rs
src/game/: character.rs  entities.rs  injection.rs  inventory.rs  map.rs  mod.rs  offsets.rs  quest.rs  redraw.rs  save_state.rs  vehicle.rs  world_map.rs
src/gui/: actions_panel.rs  audio_panel.rs  connection_bar.rs  inventory_panel.rs  location_panel.rs  memory_watch_panel.rs  minimap_fog.rs  minimap_gl.rs  minimap_panel.rs  mod.rs  party_panel.rs  quest_panel.rs
src/memory/: access.rs  buffered.rs  mod.rs  process.rs  scanner.rs
src/tiles/: atlas.rs  ega.rs  lzw.rs  mod.rs
