[package]
name = "ninth-virtue"
version = "0.1.0"
edition = "2024"
default-run = "ninth-virtue"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
bytemuck = "1"
glow = "0.16"
egui_glow = "0.31"
windows = { version = "0.61", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Wdk_System_Threading",
    "Win32_System_Kernel",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
